--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
+@import url("components.css");
+
 body {
   overflow: hidden;
   margin: 0;
@@ -221,60 +223,6 @@ body {
 
 .video-js .vjs-play-progress:before {
   content: '';
-}
-
-/* Text translate */
-
-.vjs-text-track-display {
-  height: 7em;
-  top: auto;
-  bottom: 6em;
-  pointer-events: auto;
-}
-
-.vjs-text-track-display > div {
-  margin: 0 !important;
-}
-
-.video-js .vjs-text-track-display .vjs-text-track-cue {
-  top: auto !important;
-  bottom: 0 !important;
-  height: max-content !important;
-  padding: 10px 0;
-  background-color: rgba(0, 0, 0, 0.5) !important;
-  font-size: 2em !important;
-}
-
-.video-js .vjs-text-track-display .vjs-text-track-cue div {
-  color: #fc6 !important;
-  font-size: 1.4em;
-}
-
-.video-js .vjs-text-track-display .vjs-text-track-cue .word-container {
-  position: relative;
-  z-index: 3;
-}
-
-.video-js .vjs-text-track-display .word-container.active .tooltip {
-  display: flex !important;
-  position: absolute;
-  width: 20em;
-  font-size: 0.65em;
-  bottom: 100%;
-  left: calc(50% - 10em);
-  padding: 1em;
-  text-align: left;
-  box-sizing: border-box;
-  background: #222121;
-  border-radius: 4px;
-  color: white;
-}
-
-.video-js .vjs-text-track-display .word {
-}
-
-.word:hover {
-  background-color: rgba(96, 132, 185, 0.83);
 }
 
 .video-js .vjs-resolution-button-wrapper .vjs-menu-button.vjs-menu-button-popup.vjs-button:before {
