--- a/src/css/style.css
+++ b/src/css/style.css
@@ -82,6 +82,7 @@ body {
 .video-js .vjs-help-button:before,
 .video-js .vjs-subtitles-button .vjs-icon-placeholder:before,
 .video-js .vjs-subtitles-button .vjs-control-text,
+.video-js .vjs-next-button > .vjs-control-text,
 .video-js .vjs-playback-rate:before,
 .video-js .vjs-resolution-button-wrapper .vjs-menu-button.vjs-menu-button-popup.vjs-button:before,
 .video-js .vjs-play-control .vjs-icon-placeholder:before,
@@ -94,6 +95,7 @@ body {
 .video-js .vjs-help-button:hover:before,
 .video-js .vjs-subtitles-button:hover .vjs-icon-placeholder:before,
 .video-js .vjs-subtitles-button:hover .vjs-control-text,
+.video-js .vjs-next-button>.vjs-control-text:hover,
 .video-js .vjs-playback-rate:hover:before,
 .video-js .vjs-resolution-button-wrapper .vjs-menu-button.vjs-menu-button-popup.vjs-button:hover:before,
 .video-js .vjs-play-control .vjs-icon-placeholder:hover:before,
