--- a/src/css/components.css
+++ b/src/css/components.css
@@ -3,7 +3,7 @@
   font-size: 1.3em;
   height: max-content;
   top: auto;
-  bottom: 4em;
+  bottom: 6em;
   pointer-events: auto;
 }
 
@@ -20,18 +20,20 @@
   position: static !important;
   height: max-content !important;
   padding-top: 10px;
-  background-color: rgba(0, 0, 0, 0.5) !important;
+  background-color: rgba(17, 17, 17, 0.9) !important;
   font-size: 2em !important;
 }
 
 .video-js .vjs-text-track-display .vjs-text-track-cue:last-child{
+  padding-top: 5px;
   padding-bottom: 10px;
 }
 
 .video-js .vjs-text-track-display .vjs-text-track-cue > div {
-  color: #fc6 !important;
   background-color: initial !important;
-  font-size: 1.3em;
+  font-size: 0.93em !important;
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 600;
 }
 
 .video-js .vjs-text-track-display .vjs-text-track-cue .word-container {
@@ -49,7 +51,8 @@
   padding: 1em;
   text-align: left;
   box-sizing: border-box;
-  background: #222121;
+  background-color: rgba(17, 17, 17, 0.9);
+  border: 1px solid #212020;
   border-radius: 4px;
   color: white;
 }
@@ -58,25 +61,26 @@
   display: block !important;
 }
 
-.word:hover {
-  background-color: rgba(96, 132, 185, 0.83);
+.video-js .vjs-text-track-display .word-container.active {
+  color: #FE4DCD;
 }
 
 .video-js .vjs-text-track-cue .tooltip .translated_text {
+  color: #FE4DCD;
+  font-weight: 700;
   margin: 0 0 1em 0;
   font-size: 1.35em;
-  opacity: 0.7;
   max-width: 75%;
 }
 
 .video-js .vjs-text-track-cue .tooltip .translation {
-  color: #FDC666;
+  color: #fff;
   font-weight: bold;
 }
 
 .video-js .vjs-text-track-display .tooltip .translation_version span.text_version {
   font-size: 1.1em;
-  color: #7e7d7d;
+  color: #7E7E7E;
 }
 
 .video-js .vjs-text-track-display .tooltip .translation_version span.part_of_speech{
@@ -97,9 +101,14 @@
   font-size: 0.7em;
   margin-left: 15px;
   float: right;
-  width: 2em;
+  width: 3em;
   height: 2em;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+.video-js .vjs-text-track-cue .translation_dictionary {
+  width: 2em;
+  margin-top: 0.2em;
 }
 
 .video-js .vjs-subtitles-button>.vjs-control-text {
@@ -272,7 +281,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  background-color: #161515;
+  background-color: #111111;
   margin: -2.8em -2.8em 1.3em;
   padding: 1.5em 2.8em;
 }
@@ -299,7 +308,7 @@
   width: 100%;
   width: calc(100% + 6em);
   height: 1px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #111111;
   margin-bottom: 1em;
 }
 
@@ -310,7 +319,7 @@
 .vjs-subtitles-button .vjs-menu li.vjs-selected,
 .vjs-subtitles-button .vjs-menu li.vjs-selected:hover,
 .vjs-subtitles-button .vjs-menu li.vjs-selected:focus {
-  color: #ceba7a;
+  color: #7E7E7E;
 }
 
 .vjs-subtitles-button .vjs-menu li.vjs-menu-item:hover {
@@ -318,8 +327,7 @@
 }
 
 .video-js .vjs-subtitles-button .vjs-menu-item.vjs-selected .checkbox-item svg {
-  width: 0.6em;
-  fill: #ceba7a;
+  width: 1.2em;
   position: absolute;
   top: 50%;
   left: 50%;
